Click NEWS

Version 1.5.0   19.May.2006

* Linux 2.6.16.13 kernel module support, including support for packages.

* IP routing element improvements, including new, gloriously fast
  DirectIPLookup element (Marko Zec with kohler).

* Add new Script element, basically replacing PokeHandlers and
  DriverManager, with support for programmability and signal handling;
  check it out.

* New elements: ChangeUID, ListenEtherSwitch, RawSocket, Socket, Truncate,
  ARPPrint and CheckARPHeader (Jose Maria Gonzalez), many wifi elements.

* Deprecated elements: FromRawSocket, FromSocket, PokeHandlers, ToRawSocket,
  ToSocket.

* Polling version of Intel's e1000-5.7.6 driver.

* Bug fixes and extensions to many elements, including ARPQuerier,
  EtherSwitch, FromDAGDump, FromDevice (userlevel), ICMPPingSource,
  IPAddrRewriter, IPFilter/IPClassifier, IPPrint, LinkUnqueue,
  RandomBitErrors, RatedUnqueue, SetTimestamp, ToDevice (kernel and
  userlevel), ToIPSummaryDump.

* Integrated nsclick patch, and improved nsclick (Michael Voorhaen, Bart
  Braem, kohler).

* x86_64 support.

* Wifi (bicket)

** Most wifi elements have been removed from the repository.  They will be
   added back as a separate package at a future date.

* Internals

** Initiate Doxygen documentation for important base types, such as
   Element, String, Notifier, and so forth.  This project is not complete;
   as each class gets Doxygenated its interface tends to change, so be
   prepared.

** Add new port_count() method, allowing elements to declare how many ports
   they support.  This replaces Element::set_ninputs(), set_noutputs(),
   add_input(), add_output(), notify_ninputs(), and notify_noutputs(),
   which are all now deprecated.

** Add RAW handler flag, for handlers whose output should not be modified
   (for example, no adding a courtesy newline).

** Element::run_timer takes a Timer * argument.  The old version is
   deprecated.

** Add a new, general mechanism for named enumerations (such as IP