@@ -304,7 +304,6 @@ click-readcounter.c
 ./etc/samplepackage:
 Makefile.in
 README
-config.h.in
 configure
 configure.ac
 sampleelt.cc
