@@ -44,53 +44,32 @@ the Click drivers to load the 'sample' package.
 GUIDE TO THE SOURCE
 -------------------
 
-    This section describes the files that make up a simple package, and how
-you will need to alter the 'etc/samplepackage' files for your own package.
+    This section describes which files make up this simple package, and how
+to alter those files for your own package.  Creating a new package is very
+simple: just create a directory for the package, copy and alter the
+'configure.ac' and 'Makefile.in' files, run 'autoconf' and './configure',
+and add your element sources.
 
 
-'configure.in'
+'configure.ac'
 ..............
 
-    Autoconf generates './configure' from this script. You will not
-generally need to alter existing parts of 'configure.in', but you might
-want to add tests to it. Since package sources '#include <click/config.h>'
-as well as their own 'config.h', you do not need to duplicate tests Click
-performs already.
+    Autoconf generates './configure' from this script.  Alter
+'configure.ac' to refer to your package, rather than the "sample" package.
+Packages rely on Click's configuration process, so package 'configure.ac'
+files are quite short.
 
     Autoconf has a useful info(1) manual.
-
-
-'install-sh', 'missing', 'mkinstalldirs', 'acclick.m4', 'aclocal.m4'
-....................................................................
-
-    These files support './configure'. Use them unchanged.
-
-
-'config.h.in'
-.............
-
-    If you add tests to 'configure.in', you will want to change
-'config.h.in' so that the results make it to 'config.h'.
 
 
 'Makefile.in'
 .............
 
-    './configure' generates a Makefile from 'Makefile.in'. Change the
-'package' variable to the name of your package.
-
-    The rest of 'Makefile.in' can generally stay as is. However, if you
-develop a complex source hierarchy -- where the element source code is in a
-separate directory, for example -- you will need to alter 'Makefile.in'.
-Look particularly at the 'top_builddir' and 'subdir' variables. You might
-also want to rerun './configure' automatically when 'configure.in' changes.
-
-
-'kernelversion.c'
-.................
-
-    This file helps build a package for the Linux kernel driver. Use it
-unchanged.
+    './configure' generates a Makefile from 'Makefile.in'.  Most of
+'Makefile.in' can generally stay as is.  However, if you develop a complex
+source hierarchy -- where the element source code is in a separate
+directory, for example -- you will need to alter it.  Look particularly at
+the 'top_builddir' and 'subdir' variables.
 
 
 Element source
@@ -126,13 +105,13 @@ C++ source files named 'WHATEVER.cc' that contain an 'EXPORT_ELEMENT' or
     Run 'make elemlist' to rebuild 'kelements.conf' and 'uelements.conf'.
 
 
-'elements.mk'
-.............
+'kelements.mk', 'uelements.mk'
+..............................
 
-    This file contains definitions for the 'K_ELEMENT_OBJS' and
-'U_ELEMENT_OBJS' Make variables, which tell Make what element source code
-to compile. It is generated by 'click-buildtool elem2make' from
-'kelements.conf' and 'uelements.conf'.
+    These files contain definitions for the 'ELEMENT_OBJS' Make variable,
+which tell Make what element source code to compile.  They are generated by
+'click-buildtool elem2make' from 'kelements.conf' and 'uelements.conf',
+respectively.
 
 
 'kpackage.cc', 'upackage.cc'
