@@ -1,22 +1,0 @@
-/* config.h.  Generated by configure.  */
-/* config.h.in.  Generated from configure.ac by autoheader.  */
-
-#ifndef CLICK_PKG_sample_CONFIG_H
-#define CLICK_PKG_sample_CONFIG_H 1
-
-/* Define to the address where bug reports for this package should be sent. */
-#define PACKAGE_BUGREPORT ""
-
-/* Define to the full name of this package. */
-#define PACKAGE_NAME "click-samplepackage"
-
-/* Define to the full name and version of this package. */
-#define PACKAGE_STRING "click-samplepackage 1.5.0"
-
-/* Define to the one symbol short name of this package. */
-#define PACKAGE_TARNAME "click-samplepackage"
-
-/* Define to the version of this package. */
-#define PACKAGE_VERSION "1.5.0"
-
-#endif /* CLICK_PKG_sample_CONFIG_H */
