@@ -18,10 +18,6 @@
 
 // ALWAYS INCLUDE <click/config.h> FIRST
 #include <click/config.h>
-// include your own config.h if appropriate
-#ifdef HAVE_CONFIG_H
-# include <config.h>
-#endif
 
 #include "sampleelt.hh"
 #include <click/error.hh>
